--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -152,7 +152,7 @@
         <div class="section">
             <h2>14. Contact Us</h2>
             <p>For questions about these Terms of Service, please contact us at:</p>
-            <p>Email: <a href="mailto:legal@souschef.app">legal@souschef.app</a></p>
+            <p>Email: <a href="mailto:legal@souschef.app">danbis664@gmail.com</a></p>
         </div>
     </div>
 </body>
