--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -191,8 +191,7 @@
             <h2>13. Contact Us</h2>
             <p>For privacy-related questions or to exercise your rights:</p>
             <p>
-                Email: <a href="mailto:privacy@souschef.app">privacy@souschef.app</a><br>
-                Address: SousChef Inc., San Francisco, CA, USA
+                Email: <a href="mailto:privacy@souschef.app">danbis664@gmail.com</a><br>
             </p>
         </div>
     </div>
