--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif;
             line-height: 1.6;
@@ -17,6 +19,7 @@
             background-color: #f9fafb;
             padding: 20px;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -25,81 +28,102 @@
             border-radius: 8px;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
+
         h1 {
             font-size: 32px;
             font-weight: bold;
             color: #111;
             margin-bottom: 8px;
         }
+
         .last-updated {
             color: #6b7280;
             font-size: 14px;
             margin-bottom: 32px;
         }
+
         .section {
             margin-bottom: 32px;
         }
+
         h2 {
             font-size: 20px;
             font-weight: bold;
             color: #111;
             margin-bottom: 12px;
         }
-        p, ul {
+
+        p,
+        ul {
             color: #4b5563;
             margin-bottom: 16px;
         }
+
         ul {
             padding-left: 20px;
         }
+
         li {
             margin-bottom: 8px;
         }
+
         a {
             color: #2563eb;
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
         @media (max-width: 640px) {
             .container {
                 padding: 24px;
             }
+
             h1 {
                 font-size: 24px;
             }
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Terms of Service</h1>
-        <p class="last-updated">Last updated: February 2025</p>
+        <p class="last-updated">Last updated: February 2026</p>
 
         <div class="section">
             <h2>1. Acceptance of Terms</h2>
-            <p>By accessing or using SousChef, you agree to be bound by these Terms of Service. If you do not agree to these terms, please do not use our application.</p>
+            <p>By accessing or using SousChef, you agree to be bound by these Terms of Service. If you do not agree to
+                these terms, please do not use our application.</p>
         </div>
 
         <div class="section">
             <h2>2. Description of Service</h2>
-            <p>SousChef is a mobile application that provides recipe management, meal planning, AI-powered cooking assistance, and related features. We reserve the right to modify, suspend, or discontinue any aspect of the service at any time.</p>
+            <p>SousChef is a mobile application that provides recipe management, meal planning, AI-powered cooking
+                assistance, and related features. We reserve the right to modify, suspend, or discontinue any aspect of
+                the service at any time.</p>
         </div>
 
         <div class="section">
             <h2>3. User Accounts</h2>
-            <p>You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account. You must provide accurate information when creating an account and keep it updated.</p>
+            <p>You are responsible for maintaining the confidentiality of your account credentials and for all
+                activities that occur under your account. You must provide accurate information when creating an account
+                and keep it updated.</p>
         </div>
 
         <div class="section">
             <h2>4. User Content</h2>
-            <p>You retain ownership of content you create, including recipes and photos. By posting content, you grant SousChef a non-exclusive, worldwide, royalty-free license to use, display, and distribute your content within the application.</p>
+            <p>You retain ownership of content you create, including recipes and photos. By posting content, you grant
+                SousChef a non-exclusive, worldwide, royalty-free license to use, display, and distribute your content
+                within the application.</p>
         </div>
 
         <div class="section">
             <h2>5. Subscription and Payments</h2>
-            <p>Premium features require a paid subscription. Subscriptions automatically renew unless cancelled. Refunds are subject to the policies of Apple App Store or Google Play Store. Prices may change with notice.</p>
+            <p>Premium features require a paid subscription. Subscriptions automatically renew unless cancelled. Refunds
+                are subject to the policies of Apple App Store or Google Play Store. Prices may change with notice.</p>
         </div>
 
         <div class="section">
@@ -116,37 +140,46 @@
 
         <div class="section">
             <h2>7. AI Features Disclaimer</h2>
-            <p>AI-powered features (portion analysis, substitutions, voice commands) are provided for informational purposes only. Nutritional estimates may not be accurate. Always verify information, especially for dietary restrictions or allergies.</p>
+            <p>AI-powered features (portion analysis, substitutions, voice commands) are provided for informational
+                purposes only. Nutritional estimates may not be accurate. Always verify information, especially for
+                dietary restrictions or allergies.</p>
         </div>
 
         <div class="section">
             <h2>8. Intellectual Property</h2>
-            <p>SousChef and its original content, features, and functionality are owned by SousChef and are protected by international copyright, trademark, and other intellectual property laws.</p>
+            <p>SousChef and its original content, features, and functionality are owned by SousChef and are protected by
+                international copyright, trademark, and other intellectual property laws.</p>
         </div>
 
         <div class="section">
             <h2>9. Limitation of Liability</h2>
-            <p>SousChef shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of the service. Our liability is limited to the amount you paid for the service in the past 12 months.</p>
+            <p>SousChef shall not be liable for any indirect, incidental, special, consequential, or punitive damages
+                arising from your use of the service. Our liability is limited to the amount you paid for the service in
+                the past 12 months.</p>
         </div>
 
         <div class="section">
             <h2>10. Indemnification</h2>
-            <p>You agree to indemnify and hold SousChef harmless from any claims, damages, or expenses arising from your use of the service or violation of these terms.</p>
+            <p>You agree to indemnify and hold SousChef harmless from any claims, damages, or expenses arising from your
+                use of the service or violation of these terms.</p>
         </div>
 
         <div class="section">
             <h2>11. Termination</h2>
-            <p>We may terminate or suspend your account at any time for violations of these terms. Upon termination, your right to use the service will immediately cease.</p>
+            <p>We may terminate or suspend your account at any time for violations of these terms. Upon termination,
+                your right to use the service will immediately cease.</p>
         </div>
 
         <div class="section">
             <h2>12. Changes to Terms</h2>
-            <p>We may modify these terms at any time. Continued use of the service after changes constitutes acceptance of the modified terms. We will notify users of significant changes.</p>
+            <p>We may modify these terms at any time. Continued use of the service after changes constitutes acceptance
+                of the modified terms. We will notify users of significant changes.</p>
         </div>
 
         <div class="section">
             <h2>13. Governing Law</h2>
-            <p>These terms shall be governed by the laws of the State of California, USA, without regard to conflict of law provisions.</p>
+            <p>These terms shall be governed by the laws of the State of California, USA, without regard to conflict of
+                law provisions.</p>
         </div>
 
         <div class="section">
@@ -156,4 +189,5 @@
         </div>
     </div>
 </body>
+
 </html>
